--- a/Statinf/tp-illustration-numerique-des-methodes-destimation-avec-r.html
+++ b/Statinf/tp-illustration-numerique-des-methodes-destimation-avec-r.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-11-28" />
+<meta name="date" content="2019-12-03" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,6 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
 </ul></li>
 <li class="part"><span><b>Statistique descriptive</b></span></li>
+<li class="part"><span><b>Séance 1</b></span></li>
 <li class="chapter" data-level="1" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html"><i class="fa fa-check"></i><b>1</b> Statistique descriptive</a><ul>
 <li class="chapter" data-level="1.1" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html#terminologie"><i class="fa fa-check"></i><b>1.1</b> Terminologie</a></li>
 <li class="chapter" data-level="1.2" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html#statistique-et-probabilites"><i class="fa fa-check"></i><b>1.2</b> Statistique et Probabilités</a></li>
@@ -276,7 +277,9 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="5.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#recapitulatif-pour-la-construction-dintervalles-de-confiance"><i class="fa fa-check"></i><b>5.3</b> Récapitulatif pour la construction d’intervalles de confiance</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-3.html"><a href="exercices-3.html"><i class="fa fa-check"></i>Exercices</a></li>
-<li class="chapter" data-level="6" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html"><i class="fa fa-check"></i><b>6</b> Tests d’hypothèses</a></li>
+<li class="chapter" data-level="6" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html"><i class="fa fa-check"></i><b>6</b> Tests d’hypothèses</a><ul>
+<li class="chapter" data-level="6.1" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#introduction-le-probleme-de-decision"><i class="fa fa-check"></i><b>6.1</b> Introduction: le problème de décision</a></li>
+</ul></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
