--- a/Statinf/tp-illustration-numerique-des-theoremes-limites-avec-r-avec-corrections.html
+++ b/Statinf/tp-illustration-numerique-des-theoremes-limites-avec-r-avec-corrections.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-11-28" />
+<meta name="date" content="2019-12-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,6 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
 </ul></li>
 <li class="part"><span><b>Statistique descriptive</b></span></li>
+<li class="part"><span><b>Séance 1</b></span></li>
 <li class="chapter" data-level="1" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html"><i class="fa fa-check"></i><b>1</b> Statistique descriptive</a><ul>
 <li class="chapter" data-level="1.1" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html#terminologie"><i class="fa fa-check"></i><b>1.1</b> Terminologie</a></li>
 <li class="chapter" data-level="1.2" data-path="statistique-descriptive.html"><a href="statistique-descriptive.html#statistique-et-probabilites"><i class="fa fa-check"></i><b>1.2</b> Statistique et Probabilités</a></li>
@@ -206,6 +207,7 @@ code span.wa { color: #bf0303; } /* Warning */
 </ul></li>
 </ul></li>
 <li class="part"><span><b>Statistique Inférentielle</b></span></li>
+<li class="part"><span><b>Séance 2</b></span></li>
 <li class="chapter" data-level="2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html"><i class="fa fa-check"></i><b>2</b> Échantillonnage et Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillonnage"><i class="fa fa-check"></i><b>2.1</b> Échantillonnage</a></li>
 <li class="chapter" data-level="2.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#la-statistique-overlinex_n"><i class="fa fa-check"></i><b>2.2</b> La statistique <span class="math inline">\(\overline{X}_n\)</span></a></li>
@@ -240,6 +242,7 @@ code span.wa { color: #bf0303; } /* Warning */
 </ul></li>
 <li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r-avec-corrections.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r-avec-corrections.html#bonus-1"><i class="fa fa-check"></i>Bonus</a></li>
 </ul></li>
+<li class="part"><span><b>Séance 3</b></span></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
 <li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
 <li class="chapter" data-level="3.2" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#methodes-destimation"><i class="fa fa-check"></i><b>3.2</b> Méthodes d’estimation</a></li>
@@ -261,22 +264,29 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="3.7" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#proprietes-des-estimateurs-de-maximum-de-vraisemblance-emv"><i class="fa fa-check"></i><b>3.7</b> Propriétés des estimateurs de maximum de vraisemblance (EMV)</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-2.html"><a href="exercices-2.html"><i class="fa fa-check"></i>Exercices</a></li>
-<li class="chapter" data-level="4" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><i class="fa fa-check"></i><b>4</b> TP illustration numérique des méthodes d’estimation avec R</a><ul>
-<li class="chapter" data-level="4.1" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html#comparaison-destimateurs"><i class="fa fa-check"></i><b>4.1</b> Comparaison d’estimateurs</a></li>
-<li class="chapter" data-level="4.2" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html#le-maximum-de-vraisemblance"><i class="fa fa-check"></i><b>4.2</b> Le maximum de vraisemblance</a></li>
-<li class="chapter" data-level="4.3" data-path="tp-illustration-numerique-des-methodes-destimation-avec-r.html"><a href="tp-illustration-numerique-des-methodes-destimation-avec-r.html#loi-de-weibull"><i class="fa fa-check"></i><b>4.3</b> Loi de Weibull</a></li>
+<li class="part"><span><b>Séance 4</b></span></li>
+<li class="chapter" data-level="" data-path="tp-estimation.html"><a href="tp-estimation.html"><i class="fa fa-check"></i>TP estimation</a><ul>
+<li class="chapter" data-level="3.8" data-path="tp-estimation.html"><a href="tp-estimation.html#comparaison-destimateurs"><i class="fa fa-check"></i><b>3.8</b> Comparaison d’estimateurs</a></li>
+<li class="chapter" data-level="3.9" data-path="tp-estimation.html"><a href="tp-estimation.html#le-maximum-de-vraisemblance"><i class="fa fa-check"></i><b>3.9</b> Le maximum de vraisemblance</a></li>
+<li class="chapter" data-level="3.10" data-path="tp-estimation.html"><a href="tp-estimation.html#loi-de-weibull"><i class="fa fa-check"></i><b>3.10</b> Loi de Weibull</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html"><i class="fa fa-check"></i><b>5</b> Estimation par Intervalle de confiance</a><ul>
-<li class="chapter" data-level="5.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalles-de-confiance-pour-pour-les-parametres-de-la-loi-normale"><i class="fa fa-check"></i><b>5.1</b> Intervalles de confiance pour pour les paramètres de la loi normale</a><ul>
-<li class="chapter" data-level="5.1.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance-connue"><i class="fa fa-check"></i><b>5.1.1</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance connue</a></li>
-<li class="chapter" data-level="5.1.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance-inconnue"><i class="fa fa-check"></i><b>5.1.2</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance inconnue</a></li>
-<li class="chapter" data-level="5.1.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance"><i class="fa fa-check"></i><b>5.1.3</b> Intervalle de confiance pour la variance d’une loi normale</a></li>
+<li class="part"><span><b>Séance 5</b></span></li>
+<li class="chapter" data-level="4" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html"><i class="fa fa-check"></i><b>4</b> Estimation par Intervalle de confiance</a><ul>
+<li class="chapter" data-level="4.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#intervalles-de-confiance-pour-pour-les-parametres-de-la-loi-normale"><i class="fa fa-check"></i><b>4.1</b> Intervalles de confiance pour pour les paramètres de la loi normale</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance-connue"><i class="fa fa-check"></i><b>4.1.1</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance connue</a></li>
+<li class="chapter" data-level="4.1.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance-inconnue"><i class="fa fa-check"></i><b>4.1.2</b> Intervalle de confiance pour l’espérance d’une loi normale avec variance inconnue</a></li>
+<li class="chapter" data-level="4.1.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-normale-variance"><i class="fa fa-check"></i><b>4.1.3</b> Intervalle de confiance pour la variance d’une loi normale</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-proportion"><i class="fa fa-check"></i><b>5.2</b> Intervalle de confiance pour une proportion</a></li>
-<li class="chapter" data-level="5.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#recapitulatif-pour-la-construction-dintervalles-de-confiance"><i class="fa fa-check"></i><b>5.3</b> Récapitulatif pour la construction d’intervalles de confiance</a></li>
+<li class="chapter" data-level="4.2" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#ic-proportion"><i class="fa fa-check"></i><b>4.2</b> Intervalle de confiance pour une proportion</a></li>
+<li class="chapter" data-level="4.3" data-path="estimation-par-intervalle-de-confiance.html"><a href="estimation-par-intervalle-de-confiance.html#recapitulatif-pour-la-construction-dintervalles-de-confiance"><i class="fa fa-check"></i><b>4.3</b> Récapitulatif pour la construction d’intervalles de confiance</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-3.html"><a href="exercices-3.html"><i class="fa fa-check"></i>Exercices</a></li>
-<li class="chapter" data-level="6" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html"><i class="fa fa-check"></i><b>6</b> Tests d’hypothèses</a></li>
+<li class="part"><span><b>Séance 6</b></span></li>
+<li class="chapter" data-level="" data-path="tp-intervalle-de-confiance.html"><a href="tp-intervalle-de-confiance.html"><i class="fa fa-check"></i>TP Intervalle de confiance</a><ul>
+<li class="chapter" data-level="" data-path="tp-intervalle-de-confiance.html"><a href="tp-intervalle-de-confiance.html#ic-pour-la-moyenne-et-la-variance-de-la-loi-normale"><i class="fa fa-check"></i>IC pour la moyenne et la variance de la loi normale</a></li>
+<li class="chapter" data-level="" data-path="tp-intervalle-de-confiance.html"><a href="tp-intervalle-de-confiance.html#ic-pour-une-proportion-et-effet-de-la-confiance"><i class="fa fa-check"></i>IC pour une proportion et effet de la confiance</a></li>
+<li><a href="tp-intervalle-de-confiance.html#ic-pour-le-parametre-lambda-dune-loi-exponentielle">IC pour le paramètre <span class="math inline">\(\lambda\)</span> d’une loi exponentielle</a></li>
+</ul></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -494,6 +504,9 @@ sur le même graphique la fonction de répartition de la loi normale <span class
 
 </div>
 </div>
+
+
+
             </section>
 
           </div>
