--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-12-04" />
+<meta name="date" content="2019-12-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -287,6 +287,23 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="" data-path="tp-intervalle-de-confiance.html"><a href="tp-intervalle-de-confiance.html#ic-pour-une-proportion-et-effet-de-la-confiance"><i class="fa fa-check"></i>IC pour une proportion et effet de la confiance</a></li>
 <li><a href="tp-intervalle-de-confiance.html#ic-pour-le-parametre-lambda-dune-loi-exponentielle">IC pour le paramètre <span class="math inline">\(\lambda\)</span> d’une loi exponentielle</a></li>
 </ul></li>
+<li class="part"><span><b>Séance 7</b></span></li>
+<li class="chapter" data-level="5" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html"><i class="fa fa-check"></i><b>5</b> Tests d’hypothèses</a><ul>
+<li class="chapter" data-level="5.1" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#introduction-le-probleme-de-decision"><i class="fa fa-check"></i><b>5.1</b> Introduction: le problème de décision</a><ul>
+<li class="chapter" data-level="5.1.1" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#les-tests-unilaterales-et-bilaterales"><i class="fa fa-check"></i><b>5.1.1</b> Les tests unilatérales et bilatérales</a></li>
+<li class="chapter" data-level="5.1.2" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#relation-entre-tests-dhypotheses-bilateraux-et-intervalles-de-confiance"><i class="fa fa-check"></i><b>5.1.2</b> Relation entre tests d’hypothèses bilatéraux et intervalles de confiance</a></li>
+<li class="chapter" data-level="5.1.3" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#la-demarche-generale-dun-test-dhypothese"><i class="fa fa-check"></i><b>5.1.3</b> La démarche générale d’un test d’hypothèse</a></li>
+<li class="chapter" data-level="5.1.4" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#types-de-test-dhypotheses"><i class="fa fa-check"></i><b>5.1.4</b> Types de test d’hypothèses</a></li>
+</ul></li>
+<li class="chapter" data-level="5.2" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#les-tests-dhypotheses-a-partir-dun-seul-echantillon"><i class="fa fa-check"></i><b>5.2</b> Les tests d’hypothèses à partir d’un seul échantillon</a><ul>
+<li class="chapter" data-level="5.2.1" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#les-tests-sur-la-moyenne-dune-distribution-normale-de-variance-connue"><i class="fa fa-check"></i><b>5.2.1</b> Les tests sur la moyenne d’une distribution normale de variance connue</a></li>
+<li class="chapter" data-level="5.2.2" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#le-tests-sur-la-moyenne-dune-distribution-normale-de-variance-inconnue"><i class="fa fa-check"></i><b>5.2.2</b> Le tests sur la moyenne d’une distribution normale de variance inconnue</a></li>
+<li class="chapter" data-level="5.2.3" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#les-tests-sur-la-variance-dune-distribution-normale"><i class="fa fa-check"></i><b>5.2.3</b> Les tests sur la variance d’une distribution normale</a></li>
+<li class="chapter" data-level="5.2.4" data-path="tests-dhypotheses.html"><a href="tests-dhypotheses.html#les-tests-sur-une-proportion"><i class="fa fa-check"></i><b>5.2.4</b> Les tests sur une proportion</a></li>
+</ul></li>
+</ul></li>
+<li class="part"><span><b>Séance 8</b></span></li>
+<li class="chapter" data-level="6" data-path="tests-dhypotheses-sur-deux-echantillons.html"><a href="tests-dhypotheses-sur-deux-echantillons.html"><i class="fa fa-check"></i><b>6</b> Tests d’hypothèses sur deux échantillons</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -387,7 +404,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <div id="header">
 <h1 class="title">Statistique Inférentielle</h1>
 <p class="author"><em>Mohamad Ghassany</em></p>
-<p class="date"><em>2019-12-04</em></p>
+<p class="date"><em>2019-12-06</em></p>
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
