--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-12-06" />
+<meta name="date" content="2019-12-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -404,7 +404,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <div id="header">
 <h1 class="title">Statistique Inférentielle</h1>
 <p class="author"><em>Mohamad Ghassany</em></p>
-<p class="date"><em>2019-12-06</em></p>
+<p class="date"><em>2019-12-09</em></p>
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
@@ -493,7 +493,9 @@ Suite exercices IC et <strong>TP</strong>
 Séance 7
 </td>
 <td style="text-align:left;">
-Tests d’Hypothèses
+Tests d’Hypothèses: <br>
+Introduction <br>
+Tests d’hypothèses à partir d’un <strong>seul</strong> échantillon
 </td>
 </tr>
 <tr>
@@ -501,6 +503,7 @@ Tests d’Hypothèses
 Séance 8
 </td>
 <td style="text-align:left;">
+Tests d’hypothèses à partir de <strong>deux</strong> échantillons
 </td>
 </tr>
 <tr>
