--- a/Statinf/exercices-4.html
+++ b/Statinf/exercices-4.html
@@ -423,7 +423,7 @@ bagues?
 <p><span id="exr:unnamed-chunk-178" class="exercise"><strong>Exercice 5.2  </strong></span>Une usine fabrique des câbles. Un câble est considéré “conforme” si sa résistance à la
 rupture est supérieure à <span class="math inline">\(3\)</span> tonnes. L’ingénieur responsable de la production voudrait
 connaître, en moyenne, la résistance à la rupture des câbles fabriqués.</p>
-<p>Il n’est, bien sûr, pas question de faire le test de rupture sur toute la production (l’usine perdrait toute sa production!). Notons <span class="math inline">\(X\)</span> la variable aléatoire correspondant à la force à exercer sur le câble pour le rompre (en tonnes). Pour cette question, on supposera que <span class="math inline">\(X \thicksim \mathcal{N}(\mu, \sigma^2)\)</span> que la valeur de
+<p>Il n’est, bien sûr, pas question de faire le test de rupture sur toute la production (l’usine perdrait toute sa production!). Notons <span class="math inline">\(X\)</span> la variable aléatoire correspondant à la force à exercer sur le câble pour le rompre (en tonnes). Pour cette question, on supposera que <span class="math inline">\(X \thicksim \mathcal{N}(\mu, \sigma^2)\)</span> et que la valeur de
 <span class="math inline">\(\sigma\)</span> est ici connue et égale à <span class="math inline">\(0.38\)</span>.</p>
 <p>Un technicien prélève donc un échantillon de <span class="math inline">\(100\)</span> câbles dans la production. Avec les données de l’échantillon, le technicien obtient les résultats suivants : la résistance
 moyenne à la rupture des <span class="math inline">\(100\)</span> câbles de l’échantillon est de <span class="math inline">\(3.5\)</span> tonnes.</p>
