--- a/Statinf/tests-dhypotheses.html
+++ b/Statinf/tests-dhypotheses.html
@@ -780,12 +780,12 @@ qui suit la loi <span class="math inline">\(St\)</span> avec <span class="math i
 <p><span class="math display">\[
 H_{0}: \mu=\mu_{0} \text { contre } H_{1}: \mu &gt; \mu_{0}
 \]</span>
-On calcule la valeur observée <span class="math inline">\(t_0\)</span> et on rejette <span class="math inline">\(H_0\)</span> si <span class="math inline">\(t_0 &gt; t_{n-1,{\alpha}}\)</span>.</p>
+On calcule la valeur observée <span class="math inline">\(t_0\)</span> et on rejette <span class="math inline">\(H_0\)</span> si <span class="math inline">\(t_0 &gt; t_{n-1,{1-\alpha}}\)</span>.</p>
 <p>Pour l’hypothèse alternative unilatérale à gauche</p>
 <p><span class="math display">\[
 H_{0}: \mu=\mu_{0} \text { contre } H_{1}: \mu &lt; \mu_{0}
 \]</span>
-On rejette <span class="math inline">\(H_0\)</span> si <span class="math inline">\(t_0 &lt; - t_{n-1,{\alpha}}\)</span>.</p>
+On rejette <span class="math inline">\(H_0\)</span> si <span class="math inline">\(t_0 &lt; t_{n-1,{\alpha}}\)</span>.</p>
 <div class="rmdtip">
 <p>Les tests sur la moyenne dans <svg style="height:0.8em;top:.04em;position:relative;fill:steelblue;" viewBox="0 0 581 512"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"/></svg> s’effectuent à l’aide de la fonction <code>t.test()</code></p>
 </div>
